--- a/SocialSharing/SocialSharing/Base.lproj/Main.storyboard
+++ b/SocialSharing/SocialSharing/Base.lproj/Main.storyboard
@@ -84,6 +84,11 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="212-uX-sew"/>
+                                    </mask>
+                                </variation>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -98,7 +103,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fKL-8P-cid" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="574" y="405"/>
+            <point key="canvasLocation" x="472" y="700"/>
         </scene>
         <!--Twitter Posts View Controller-->
         <scene sceneID="jEx-FG-uR0">
@@ -118,6 +123,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wUc-vd-k4a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="574" y="-234"/>
+        </scene>
+        <!--Instagram View Controller-->
+        <scene sceneID="NmA-Db-PS4">
+            <objects>
+                <viewController storyboardIdentifier="InstagramView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="iG1-O4-WZE" customClass="InstagramViewController" customModule="SocialSharing" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Cp9-IY-tUR"/>
+                        <viewControllerLayoutGuide type="bottom" id="wvm-63-2U4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eRP-0o-KIh">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GyS-oX-nYu">
+                                <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="GyS-oX-nYu" firstAttribute="leading" secondItem="eRP-0o-KIh" secondAttribute="leading" id="ORs-8D-7oQ"/>
+                            <constraint firstItem="GyS-oX-nYu" firstAttribute="top" secondItem="Cp9-IY-tUR" secondAttribute="bottom" id="Zff-XQ-r8Y"/>
+                            <constraint firstItem="wvm-63-2U4" firstAttribute="top" secondItem="GyS-oX-nYu" secondAttribute="bottom" id="sJj-gN-hHU"/>
+                            <constraint firstAttribute="trailing" secondItem="GyS-oX-nYu" secondAttribute="trailing" id="wUw-tA-OhT"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="webView" destination="GyS-oX-nYu" id="Z4x-nI-RP6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3oO-NX-8bN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="536" y="352"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="MH9-oL-hfw">
@@ -181,6 +220,74 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QBs-w9-3xZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-242" y="150"/>
+        </scene>
+        <!--Google View Controller-->
+        <scene sceneID="YaJ-br-qgn">
+            <objects>
+                <viewController storyboardIdentifier="GoogleViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="GOe-4G-TUM" customClass="GoogleViewController" customModule="SocialSharing" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="aVC-5L-zXz"/>
+                        <viewControllerLayoutGuide type="bottom" id="Eah-rn-dyR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ZcB-bw-det">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GDS-tm-wYL" customClass="GIDSignInButton">
+                                <rect key="frame" x="85" y="47" width="149" height="34"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="149" id="fLs-7H-htX"/>
+                                    <constraint firstAttribute="height" constant="34" id="lz6-zM-OOe"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="GDS-tm-wYL" secondAttribute="trailing" constant="86" id="Bdr-eW-ElO"/>
+                            <constraint firstItem="GDS-tm-wYL" firstAttribute="leading" secondItem="ZcB-bw-det" secondAttribute="leading" constant="85" id="Z2N-nc-vx7"/>
+                            <constraint firstItem="GDS-tm-wYL" firstAttribute="top" secondItem="aVC-5L-zXz" secondAttribute="bottom" constant="27" id="eY8-uO-Gp7"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kNm-rK-mPe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-220" y="-614"/>
+        </scene>
+        <!--Linkedin Manager-->
+        <scene sceneID="BJQ-ra-emC">
+            <objects>
+                <viewController storyboardIdentifier="LinkedinView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="7JM-YG-LrQ" customClass="LinkedinManager" customModule="SocialSharing" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0Uz-DB-Pvy"/>
+                        <viewControllerLayoutGuide type="bottom" id="xzq-eS-Zj8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cER-Mn-YD7">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oOV-bt-nv7">
+                                <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xzq-eS-Zj8" firstAttribute="top" secondItem="oOV-bt-nv7" secondAttribute="bottom" id="2dF-2l-Gae"/>
+                            <constraint firstItem="oOV-bt-nv7" firstAttribute="top" secondItem="0Uz-DB-Pvy" secondAttribute="bottom" id="4zk-vz-kEG"/>
+                            <constraint firstItem="oOV-bt-nv7" firstAttribute="leading" secondItem="cER-Mn-YD7" secondAttribute="leading" id="M5C-g9-I6j"/>
+                            <constraint firstAttribute="trailing" secondItem="oOV-bt-nv7" secondAttribute="trailing" id="P4a-0w-XlM"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="webView" destination="oOV-bt-nv7" id="eae-AK-oG6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jb9-9N-nvD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="231" y="-476"/>
         </scene>
     </scenes>
 </document>
